--- a/heart-animated.html
+++ b/heart-animated.html
@@ -8,8 +8,11 @@
     <title>Animated Text</title>
   </head>
   <body>
-    <div class="centered_div">
-        <p>Love</p>
+    <div class="heart">
+        <div class="heart_left">
+        </div>
+        <div class="heart_right">
+        </div>
     </div>
   </body>
 </html>
