--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
     <div>
       <a href="texte-animated.html">Lien vers texte-animated</a>
     </div>
+    <div>
+      <a href="heart-animated.html">Lien vers heart-animated</a>
+    </div>
+    <div>
+      <a href="table-responsive.html">Lien vers table-responsive</a>
+    </div>
   </body>
 </html>
