fin du TP Réparation des tableaux

--- a/table-responsive.html
+++ b/table-responsive.html
@@ -8,46 +8,48 @@
     <title>Animated Text</title>
   </head>
   <body>
+    <div class="container_table">
     <div class="table">
         <table>
             <tr>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
+                <td>A1AAAAAAAAAAAAAA</td>
+                <td>A2AAAAAAAA</td>
+                <td>A3AA</td>
+                <td>A4AAAAAAAAAAAA</td>
+                <td>A5AAAAAAAAA</td>
+                <td>A6AAAAAA</td>
+                <td>A7AAAAAAAAAAAAAA</td>
+                <td>A8AAAAAAAAAAAAAA</td>
+                <td>A9AAAAAAAA</td>
+                <td>A10AAAAAAAAAAAAAAAAA</td>
             </tr>
             <tr>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
+                <td>B1AAAAAAAAAA</td>
+                <td>B2AA</td>
+                <td>B3AAAAAAAAAAAA</td>
+                <td>B4AAAAAAAAA</td>
+                <td>B5AAAA</td>
+                <td>B6AAAAAAAAAAAAAA</td>
+                <td>B7AAAAAAAAA</td>
+                <td>B8AAAAAAAAAAAAAAAAAA</td>
+                <td>B9AAAA</td>
+                <td>B10AAAAAAAAAAAAAA</td>
             </tr>
             <tr>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
-                <td>Company</td>
+                <td>C1AAAAAAAAAAAAAAA</td>
+                <td>C2AAAAAAAA</td>
+                <td>C3AAAAAAAAAAAA</td>
+                <td>C4AA</td>
+                <td>C5AAAAAAAAAAAAAAAAAAA</td>
+                <td>C6AAAA</td>
+                <td>C7AAAAAA</td>
+                <td>C8AAAAAAAAA</td>
+                <td>C9AA</td>
+                <td>C10AAAAAAAAAAAAAA</td>
             </tr>
         </table>
     </div>
+    <div class="direction_column">
     <div class="table-2">
         <table>
             <tr>
@@ -159,6 +161,8 @@
         <p>8: NCKJDNJJCFJFNJ</p>
         <p>9: REREEDFFD</p>
         <p>10: 3578847</p>
+    </div>
+    </div>
     </div>
   </body>
 </html>
